--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: "Ozone";
+  src: url("./Ozone.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+:root {
+  --black: #0d0d0d;
+  --red: #ff2d2b;
+}
+
+
+* {
+  box-sizing:border=box;
+}
+
+html {
+  font-size:62.5%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
