added modal to game.js component

--- a/src/components/Tiles/tile.css
+++ b/src/components/Tiles/tile.css
@@ -16,6 +16,8 @@
  flex-direction: row;
  height: 45px;
  text-align: center;
+ color:#fff;
+ text-transform: uppercase;
  /* font-weight:bold; */
  font-size:2rem;
  border-radius:5px;
