--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h1 {
+  font-size:3rem
+}
+
+h2 {
+  font-size:2.8rem
+}
+
+h3 {
+  font-size:2.5rem
+}
+
+h4 {
+  font-size:2rem
+}
+
+h5 {
+  font-size:1.5rem
+}
+
+h6 {
+  font-size:1rem
+}
